--- a/formulario.html
+++ b/formulario.html
@@ -16,17 +16,41 @@
     <title>Formulario de contacto</title>
   </head>
   <body>
+    <form action="">
+      <div>
+        <label for="">Nombre: </label>
+        <input type="text" placeholder="Ingrese nombre..." required />
+      </div>
+      <div>
+        <label for="">Apellido: </label>
+        <input type="text" placeholder="Ingrese apellido..." required />
+      </div>
+      <div>
+        <label for="">Edad: </label>
+        <input type="number" placeholder="Ingrese edad..." required />
+      </div>
+      <div>
+        <label for="">Email: </label>
+        <input type="email" placeholder="Ingrese email..." required />
+      </div>
+      <button type="submit">Enviar</button>
+    </form>
+
+    <br />
+    <br />
+    <br />
+
     <footer class="bg-dark text-white py-4">
       <div class="container">
         <div class="row">
           <!-- Columna 1: Logo o nombre -->
-          <div class="col-md-4 mb-3">
+          <div class="col-3 mb-3">
             <h5>Informacion sobre paises del mundo</h5>
             <p class="text-muted">© 2025 Todos los derechos reservados.</p>
           </div>
 
           <!-- Columna 3: Redes sociales -->
-          <div class="col-md-4 mb-3">
+          <div class="col mb-3">
             <h5>Nuestras Redes Sociales</h5>
             <a href="#" class="text-white me-2"
               ><i class="fa-brands fa-facebook"></i> Facebook</a
