--- a/index.html
+++ b/index.html
@@ -46,20 +46,21 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="buscarPais.html">Buscar pais</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <!--<form class="d-flex" role="search">
             <input
               class="form-control me-2"
               type="search"
               placeholder="Search"
               aria-label="Search"
+              id="Buscador"
             />
-            <button class="btn btn-outline-success" type="submit">
+            <button class="btn btn-outline-success" id="boton" type="submit">
               Search
             </button>
-          </form>
+          </form>-->
         </div>
       </div>
     </nav>
@@ -92,6 +93,13 @@
           <!-- pt-5:  padding, t: top -->
           <div class="col-8">
             <h5>Nuestras Redes Sociales</h5>
+            <a
+              href="https://web.whatsapp.com/"
+              target="_blank"
+              class="text-white me-2"
+              ><i class="fa-brands fa-whatsapp"></i> WhatsApp</a
+            >
+
             <a
               href="https://www.facebook.com/?locale=es_LA"
               target="_blank"
