--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="index.html"
+          ><i class="fa-solid fa-house"></i
+        ></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,9 +37,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="formulario.html">Formulario</a>
             </li>
@@ -66,10 +65,10 @@
     </nav>
 
     <section>
-      <div id="listado"></div>
+      <div id="listado" class="container">Comparacion de poblacion</div>
     </section>
     <section>
-      <div>Seecion 2</div>
+      <div>Comparacion de areas</div>
     </section>
     <section>
       <div>Seecion 3</div>
@@ -78,11 +77,11 @@
       <div>Seecion 4</div>
     </section>
 
-    <footer class="bg-dark text-white py-2 px-0">
+    <footer class="bg-dark text-white">
       <div class="container">
         <div class="row">
           <!-- Columna 1: Logo o nombre -->
-          <div class="col-4">
+          <div class="col-4 col-lg-4">
             <h5>Informacion sobre paises del mundo</h5>
             <p class="text-muted">© 2025 Todos los derechos reservados.</p>
           </div>
@@ -91,7 +90,7 @@
           <!-- md: breakpoint para tamaño pantalla, 4: ocupa 4 columnas  -->
           <!-- mb:  margin, b = bottom -->
           <!-- pt-5:  padding, t: top -->
-          <div class="col-8">
+          <div class="col-8 col-lg-8">
             <h5>Nuestras Redes Sociales</h5>
             <a
               href="https://web.whatsapp.com/"
