--- a/index.html
+++ b/index.html
@@ -65,10 +65,13 @@
     </nav>
 
     <section>
-      <div id="listado" class="container">Comparacion de poblacion</div>
+      <div class="container">
+        <h1 class="titulo-index-sec-1">Comparacion de poblacion</h1>
+        <div class="row g-3" id="listado"></div>
+      </div>
     </section>
     <section>
-      <div>Comparacion de areas</div>
+      <div id="areas" class="container">Comparacion de areas</div>
     </section>
     <section>
       <div>Seecion 3</div>
@@ -81,7 +84,7 @@
       <div class="container">
         <div class="row">
           <!-- Columna 1: Logo o nombre -->
-          <div class="col-4 col-lg-4">
+          <div class="col-4 col-md-4">
             <h5>Informacion sobre paises del mundo</h5>
             <p class="text-muted">© 2025 Todos los derechos reservados.</p>
           </div>
@@ -90,7 +93,7 @@
           <!-- md: breakpoint para tamaño pantalla, 4: ocupa 4 columnas  -->
           <!-- mb:  margin, b = bottom -->
           <!-- pt-5:  padding, t: top -->
-          <div class="col-8 col-lg-8">
+          <div class="col-8 col-md-8">
             <h5>Nuestras Redes Sociales</h5>
             <a
               href="https://web.whatsapp.com/"
