--- a/index.html
+++ b/index.html
@@ -66,18 +66,36 @@
 
     <section>
       <div class="container">
-        <h1 class="titulo-index-sec-1">Comparacion de poblacion</h1>
-        <div class="row g-3" id="listado"></div>
+        <h3 class="text-center">Los 10 paises mas poblados</h3>
+        <div class="table-responsive-md">
+          <table
+            class="table table-striped table-hover table-bordered d-none d-md-table"
+          >
+            <!-- Oculta tabla en móviles -->
+            <thead>
+              <tr>
+                <th scope="col">Orden</th>
+                <th scope="col">Pais</th>
+                <th scope="col">Capital</th>
+                <th scope="col">Continente</th>
+                <th scope="col">Poblacion</th>
+              </tr>
+            </thead>
+            <tbody id="cuerpoTabla"></tbody>
+          </table>
+        </div>
+        <!-- Contenedor para cards (solo visible en móviles) -->
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-9 offset-1 align-self-center">
+              <div id="cardsContainer" class="d-md-none"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section>
       <div id="areas" class="container">Comparacion de areas</div>
-    </section>
-    <section>
-      <div>Seecion 3</div>
-    </section>
-    <section>
-      <div>Seecion 4</div>
     </section>
 
     <footer class="bg-dark text-white">
