--- a/galeria.html
+++ b/galeria.html
@@ -18,7 +18,131 @@
     <title>Banderas</title>
   </head>
   <body>
-    <div id="cont-galeria" class="container"></div>
+    <nav class="navbar navbar-expand-lg bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"
+          ><i class="fa-solid fa-house text-light"></i
+        ></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link text-light" href="formulario.html"
+                >Formulario</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="galeria.html">Galeria</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link text-light" href="buscarPais.html"
+                >Buscar pais</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <h1 class="text-center">Top 10 banderas mas admiradas</h1>
+    <div class="container">
+      <div class="row g-3">
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/Japon.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/Canada.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/ReinoUnido.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/Sudafrica.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/Brasil.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/CoreaDelSur.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/Nepal.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/Mexico.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/Grecia.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/EstadosUnidos.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/Suiza.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+        <div class="col-6 col-md-4 col-lg-3">
+          <img
+            src="Banderas/Noruega.jpeg"
+            alt=""
+            class="img-fluid object-fit-cover"
+          />
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
