--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <title>Inicio</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"
-          ><i class="fa-solid fa-house"></i
+          ><i class="fa-solid fa-house text-light"></i
         ></a>
         <button
           class="navbar-toggler"
@@ -38,28 +38,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="formulario.html">Formulario</a>
+              <a class="nav-link text-light" href="formulario.html"
+                >Formulario</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="galeria.html">Galeria</a>
+              <a class="nav-link text-light" href="galeria.html">Galeria</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="buscarPais.html">Buscar pais</a>
+              <a class="nav-link text-light" href="buscarPais.html"
+                >Buscar pais</a
+              >
             </li>
           </ul>
-          <!--<form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-              id="Buscador"
-            />
-            <button class="btn btn-outline-success" id="boton" type="submit">
-              Search
-            </button>
-          </form>-->
         </div>
       </div>
     </nav>
@@ -98,7 +90,7 @@
       <div id="areas" class="container">Comparacion de areas</div>
     </section>
 
-    <footer class="bg-dark text-white">
+    <footer class="bg-dark text-white bg-primary">
       <div class="container">
         <div class="row">
           <!-- Columna 1: Logo o nombre -->
