--- a/galeria.html
+++ b/galeria.html
@@ -18,42 +18,44 @@
     <title>Banderas</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"
-          ><i class="fa-solid fa-house text-light"></i
-        ></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link text-light" href="formulario.html"
-                >Formulario</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="galeria.html">Galeria</a>
-            </li>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg bg-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"
+            ><i class="fa-solid fa-house text-light"></i
+          ></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link text-light" href="formulario.html"
+                  >Formulario</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="galeria.html">Galeria</a>
+              </li>
 
-            <li class="nav-item">
-              <a class="nav-link text-light" href="buscarPais.html"
-                >Buscar pais</a
-              >
-            </li>
-          </ul>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="buscarPais.html"
+                  >Buscar pais</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <h1 class="text-center">Top 10 banderas mas admiradas</h1>
     <div class="container">
       <div class="row g-3">
