--- a/galeria.html
+++ b/galeria.html
@@ -18,45 +18,43 @@
     <title>Banderas</title>
   </head>
   <body>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg bg-primary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"
-            ><i class="fa-solid fa-house text-light"></i
-          ></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link text-light" href="formulario.html"
-                  >Formulario</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="galeria.html">Galeria</a>
-              </li>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand text-primary" href="index.html"
+          ><i class="fa-solid fa-chart-line"></i> Estadisticas Mundiales</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
+            <li class="nav-item">
+              <a class="nav-link text-light" href="galeria.html">Galeria</a>
+            </li>
 
-              <li class="nav-item">
-                <a class="nav-link text-light" href="buscarPais.html"
-                  >Buscar pais</a
-                >
-              </li>
-            </ul>
-          </div>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="estadisticas.html"
+                >Estadisticas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="formulario.html"
+                >Formulario</a
+              >
+            </li>
+          </ul>
         </div>
-      </nav>
-    </div>
-    <h1 class="text-center">Top 10 banderas mas admiradas</h1>
+      </div>
+    </nav>
+    <h1 class="text-center m-3 text-white">Top 10 banderas mas admiradas</h1>
     <div class="container">
       <div class="row g-3">
         <div class="col-6 col-md-4 col-lg-3">
