--- a/formulario.html
+++ b/formulario.html
@@ -16,11 +16,11 @@
     <title>Formulario de contacto</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"
-          ><i class="fa-solid fa-house"></i
-        ></a>
+        <a class="navbar-brand text-primary" href="index.html"
+          ><i class="fa-solid fa-chart-line"></i> Estadisticas Mundiales</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -33,16 +33,20 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
             <li class="nav-item">
-              <a class="nav-link" href="formulario.html">Formulario</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="galeria.html">Galeria</a>
+              <a class="nav-link text-light" href="galeria.html">Galeria</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="buscarPais.html">Buscar pais</a>
+              <a class="nav-link text-light" href="estadisticas.html"
+                >Estadisticas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="formulario.html"
+                >Formulario</a
+              >
             </li>
           </ul>
         </div>
