--- a/index.html
+++ b/index.html
@@ -19,100 +19,121 @@
     <title>Inicio</title>
   </head>
   <body>
-    <div class="container">
-      <nav
-        class="navbar navbar-expand-lg bg-body-tertiary"
-        data-bs-theme="dark"
-      >
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"
-            ><i class="fa-solid fa-house text-light"></i
-          ></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
-              <li class="nav-item">
-                <a class="nav-link text-light" href="formulario.html"
-                  >Formulario</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="galeria.html">Galeria</a>
-              </li>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand text-primary" href="index.html"
+          ><i class="fa-solid fa-chart-line"></i> Estadisticas Mundiales</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
+            <li class="nav-item">
+              <a class="nav-link text-light" href="galeria.html">Galeria</a>
+            </li>
 
-              <li class="nav-item">
-                <a class="nav-link text-light" href="buscarPais.html"
-                  >Buscar pais</a
-                >
-              </li>
-            </ul>
-          </div>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="estadisticas.html"
+                >Estadisticas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="formulario.html"
+                >Formulario</a
+              >
+            </li>
+          </ul>
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
 
-    <section>
-      <h1 class="text-center">Descubre el Mundo con Datos Precisos</h1>
-      <p>
-        Bienvenido a <strong>Estadisticas Mundiales</strong>, tu fuente
-        confiable de información actualizada sobre todos los países del mundo.
-        Gracias a la poderosa Countries API, ofrecemos datos demográficos,
-        geográficos, económicos y culturales en un solo lugar.Ideal para
-        estudiantes, viajeros y curiosos que deseen conocer nuestro planeta con
-        información verificada y en tiempo real.
-      </p>
-    </section>
-    <section>
-      Explora:
+    <section class="mt-4">
+      <h1 class="text-center text-white">
+        Descubre el Mundo con Datos Precisos
+      </h1>
       <div class="container">
-        <div class="row g-2">
-          <div class="col-10 col-md-6 col-lg-3">
-            <div class="card text-bg-dark">
-              <img src="Imagenes/Banderas.png" class="card-img" alt="..." />
-              <div
-                class="card-img-overlay d-flex justify-content-center align-items-center"
-              >
-                <h5 class="card-title text-white">Banderas y capitales</h5>
+        <div class="row">
+          <div class="col-12 col-md-12 col-lg-12">
+            <p class="text-white">
+              Bienvenido a <strong>Estadisticas Mundiales</strong>, tu fuente
+              confiable de información actualizada sobre todos los países del
+              mundo. Gracias a nuestro increible equipo, ofrecemos datos
+              demográficos, geográficos, económicos y culturales en un solo
+              lugar. Ideal para estudiantes, viajeros y curiosos que deseen
+              conocer nuestro planeta con información verificada y en tiempo
+              real.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <h2 class="mb-3 text-white">Explora...</h2>
+        <div class="row g-4">
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="card text-bg-dark h-100 cartas-exploracion">
+              <div class="ratio ratio-16x9">
+                <img
+                  src="Imagenes/Banderas.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+              </div>
+              <div class="card-body">
+                <h5 class="card-title text-center">Banderas</h5>
               </div>
             </div>
           </div>
-          <div class="col-10 col-md-6 col-lg-3">
-            <div class="card text-bg-dark">
-              <img src="Imagenes/Banderas.png" class="card-img" alt="..." />
-              <div
-                class="card-img-overlay d-flex justify-content-center align-items-center"
-              >
-                <h5 class="card-title text-white">Poblacion e idiomas</h5>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="card text-bg-dark h-100 cartas-exploracion">
+              <div class="ratio ratio-16x9">
+                <img
+                  src="Imagenes/Poblaciones.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+              </div>
+              <div class="card-body">
+                <h5 class="card-title text-center">Poblaciones</h5>
               </div>
             </div>
           </div>
-          <div class="col-10 col-md-6 col-lg-3">
-            <div class="card text-bg-dark">
-              <img src="Imagenes/Banderas.png" class="card-img" alt="..." />
-              <div
-                class="card-img-overlay d-flex justify-content-center align-items-center"
-              >
-                <h5 class="card-title text-white">Monedas y regiones</h5>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="card text-bg-dark h-100 cartas-exploracion">
+              <div class="ratio ratio-16x9">
+                <img
+                  src="Imagenes/PrincipalesCapitales.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+              </div>
+              <div class="card-body">
+                <h5 class="card-title text-center">Principales capitales</h5>
               </div>
             </div>
           </div>
-          <div class="col-10 col-md-6 col-lg-3">
-            <div class="card text-bg-dark">
-              <img src="Imagenes/Banderas.png" class="card-img" alt="..." />
-              <div
-                class="card-img-overlay d-flex justify-content-center align-items-center"
-              >
-                <h5 class="card-title text-white">Mucho mas...</h5>
+          <div class="col-12 col-md-6 col-lg-3">
+            <div class="card text-bg-dark h-100 cartas-exploracion">
+              <div class="ratio ratio-16x9">
+                <img
+                  src="Imagenes/DatosInteresantes.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+              </div>
+              <div class="card-body">
+                <h5 class="card-title text-center">Datos interesnates</h5>
               </div>
             </div>
           </div>
@@ -120,38 +141,128 @@
       </div>
     </section>
 
-    <section>
-      <div class="container mt-5">
-        <h3 class="text-center">Los 10 paises mas poblados</h3>
-        <div class="table-responsive-md pt-3">
-          <table
-            class="table table-striped table-hover table-bordered d-none d-md-table table-dark border-white"
-          >
-            <!-- Oculta tabla en móviles -->
-            <thead>
-              <tr>
-                <th scope="col">Orden</th>
-                <th scope="col">Pais</th>
-                <th scope="col">Capital</th>
-                <th scope="col">Continente</th>
-                <th scope="col">Poblacion</th>
-              </tr>
-            </thead>
-            <tbody id="cuerpoTabla"></tbody>
-          </table>
-        </div>
-        <!-- Contenedor para cards (solo visible en móviles) -->
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-9 offset-1 align-self-center">
-              <div id="cardsContainer" class="d-md-none"></div>
-            </div>
+    <section class="py-5">
+      <div class="container">
+        <article>
+          <header class="mb-4">
+            <h2 class="text-white">Un poco de nuestra historia</h2>
+            <p class="lead">
+              De un proyecto universitario a una plataforma global de datos
+            </p>
+          </header>
+
+          <div class="row g-4">
+            <section class="col-md-6">
+              <div class="card h-100 border-0 shadow-sm bg-black text-white">
+                <div class="card-body">
+                  <h3 class="h4 card-title text-primary">
+                    <i class="fas fa-seedling me-2"></i>Los inicios
+                  </h3>
+                  <div class="card-text">
+                    <p>
+                      Todo comenzó en 2021, cuando cuatro compañeros de
+                      universidad con intereses complementarios se unieron para
+                      un proyecto de clase:
+                    </p>
+                    <ul class="list-unstyled">
+                      <li class="mb-2"><strong>María</strong> - Estadística</li>
+                      <li class="mb-2"><strong>Carlos</strong> - Geografía</li>
+                      <li class="mb-2">
+                        <strong>Lucía</strong> - Desarrollo Frontend
+                      </li>
+                      <li><strong>Javier</strong> - Bases de datos</li>
+                    </ul>
+                    <p>
+                      Juntos identificaron una carencia: no existían plataformas
+                      unificadas con datos completos y visualizaciones
+                      atractivas sobre países.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <section class="col-md-6">
+              <div class="card h-100 border-0 shadow-sm bg-black text-white">
+                <div class="card-body">
+                  <h3 class="h4 card-title text-primary">
+                    <i class="fas fa-trophy me-2"></i>El primer éxito
+                  </h3>
+                  <div class="card-text">
+                    <p>
+                      Durante una maratón de programación universitaria
+                      desarrollaron el prototipo inicial:
+                    </p>
+                    <ul>
+                      <li>Banderas y Estadísticas poblacionales</li>
+                      <li>Datos demográficos básicos</li>
+                      <li>Integración con APIs públicas</li>
+                    </ul>
+                    <p>
+                      Ganamos el primer lugar y descubrimos el potencial real de
+                      la idea cuando profesores y compañeros comenzaron a usarlo
+                      regularmente.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <section class="col-12">
+              <div class="card border-0 shadow-sm mt-3">
+                <div class="card-body text-white bg-black">
+                  <h3 class="h4 card-title text-primary">
+                    <i class="fas fa-rocket me-2"></i>Nacimiento oficial
+                  </h3>
+                  <div class="card-text">
+                    <p>
+                      Con apoyo de un fondo de emprendimiento universitario,
+                      formalizamos <strong>Estadísticas Mundiales</strong> en
+                      2022. Nuestros primeros logros:
+                    </p>
+
+                    <div class="row">
+                      <div class="col-md-4 mb-3">
+                        <div
+                          class="p-3 bg-dark text-white rounded tarjetas-nacimiento"
+                        >
+                          <h4 class="h6">Integración de datos</h4>
+                          <p class="small mb-0">
+                            Fuentes confiables y actualizadas
+                          </p>
+                        </div>
+                      </div>
+                      <div class="col-md-4 mb-3">
+                        <div
+                          class="p-3 bg-dark text-white rounded tarjetas-nacimiento"
+                        >
+                          <h4 class="h6">Diseño intuitivo</h4>
+                          <p class="small mb-0">
+                            Interfaz accesible con Bootstrap
+                          </p>
+                        </div>
+                      </div>
+                      <div class="col-md-4 mb-3">
+                        <div
+                          class="p-3 bg-dark text-white rounded tarjetas-nacimiento"
+                        >
+                          <h4 class="h6">Visualizaciones</h4>
+                          <p class="small mb-0">Gráficos interactivos</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <p class="mt-3">
+                      Hoy mantenemos el mismo espíritu innovador, guiados por
+                      nuestros usuarios y su curiosidad por el mundo.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </section>
           </div>
-        </div>
+        </article>
       </div>
-    </section>
-    <section>
-      <div id="areas" class="container">Comparacion de areas</div>
     </section>
 
     <footer class="bg-dark text-white bg-primary p-4">
@@ -159,8 +270,8 @@
         <div class="row">
           <!-- Columna 1: Logo o nombre -->
           <div class="col-4 col-md-4">
-            <h5>Informacion sobre paises del mundo</h5>
-            <p class="text-muted">© 2025 Todos los derechos reservados.</p>
+            <h5>Estadisticas Mundiales</h5>
+            <p class="text-white">© 2025 Todos los derechos reservados.</p>
           </div>
 
           <!-- Columna 3: Redes sociales -->
