--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="formulario.html"
-                >Formulario</a
+              <a class="nav-link text-light" href="registro.html"
+                >Registrarse</a
               >
             </li>
           </ul>
@@ -64,9 +64,10 @@
         <div class="row">
           <div class="col-12 col-md-12 col-lg-12">
             <p class="text-white">
-              Bienvenido a <strong>Estadisticas Mundiales</strong>, tu fuente
-              confiable de información actualizada sobre todos los países del
-              mundo. Gracias a nuestro increible equipo, ofrecemos datos
+              Bienvenido a
+              <strong class="text-primary">Estadisticas Mundiales</strong>, tu
+              fuente confiable de información actualizada sobre todos los países
+              del mundo. Gracias a nuestro increible equipo, ofrecemos datos
               demográficos, geográficos, económicos y culturales en un solo
               lugar. Ideal para estudiantes, viajeros y curiosos que deseen
               conocer nuestro planeta con información verificada y en tiempo
@@ -133,7 +134,7 @@
                 />
               </div>
               <div class="card-body">
-                <h5 class="card-title text-center">Datos interesnates</h5>
+                <h5 class="card-title text-center">Datos interesantes</h5>
               </div>
             </div>
           </div>
@@ -146,7 +147,7 @@
         <article>
           <header class="mb-4">
             <h2 class="text-white">Un poco de nuestra historia</h2>
-            <p class="lead">
+            <p class="lead text-white">
               De un proyecto universitario a una plataforma global de datos
             </p>
           </header>
@@ -170,7 +171,7 @@
                       <li class="mb-2">
                         <strong>Lucía</strong> - Desarrollo Frontend
                       </li>
-                      <li><strong>Javier</strong> - Bases de datos</li>
+                      <li><strong> Javier</strong> - Bases de datos</li>
                     </ul>
                     <p>
                       Juntos identificaron una carencia: no existían plataformas
@@ -270,7 +271,7 @@
         <div class="row">
           <!-- Columna 1: Logo o nombre -->
           <div class="col-4 col-md-4">
-            <h5>Estadisticas Mundiales</h5>
+            <h5 class="text-primary">Estadisticas Mundiales</h5>
             <p class="text-white">© 2025 Todos los derechos reservados.</p>
           </div>
 
@@ -283,32 +284,32 @@
             <a
               href="https://web.whatsapp.com/"
               target="_blank"
-              class="text-white me-2"
+              class="text-white me-2 enlace-whatsapp"
               ><i class="fa-brands fa-whatsapp"></i> WhatsApp</a
             >
 
             <a
               href="https://www.facebook.com/?locale=es_LA"
               target="_blank"
-              class="text-white me-2"
+              class="text-white me-2 enlace-facebook"
               ><i class="fa-brands fa-facebook"></i> Facebook</a
             >
             <a
               href="https://www.instagram.com/"
               target="_blank"
-              class="text-white me-2"
+              class="text-white me-2 enlace-instagram"
               ><i class="fa-brands fa-instagram"></i> Instagram</a
             >
             <a
               href="https://x.com/?lang=es"
               target="_blank"
-              class="text-white me-2"
+              class="text-white me-2 enlace-twitter"
               ><i class="fa-brands fa-x-twitter"></i> Twitter</a
             >
             <a
               href="https://www.youtube.com/"
               target="_blank"
-              class="text-white me-2"
+              class="text-white me-2 enlace-youtube"
               ><i class="fa-brands fa-youtube"></i> YouTube</a
             >
           </div>
