--- a/registro.html
+++ b/registro.html
@@ -13,6 +13,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
+    <link rel="stylesheet" href="style.css" />
+
     <title>Formulario de contacto</title>
   </head>
   <body>
@@ -44,8 +46,8 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="formulario.html"
-                >Formulario</a
+              <a class="nav-link text-light" href="registro.html"
+                >Registrarse</a
               >
             </li>
           </ul>
@@ -57,7 +59,9 @@
       <div class="row justify-content-center">
         <div class="col-md-8 col-lg-6">
           <form id="formContacto" class="border p-4 rounded shadow-sm bg-light">
-            <h2 class="mb-4 text-center">Contacto</h2>
+            <h2 class="mb-4 text-center">
+              Registra tus datos para recibir notificaciones diarias
+            </h2>
 
             <!-- Campo 1: Nombre (texto) -->
             <div class="mb-3">
