--- a/galeria.html
+++ b/galeria.html
@@ -46,8 +46,8 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="formulario.html"
-                >Formulario</a
+              <a class="nav-link text-light" href="registro.html"
+                >Registrarse</a
               >
             </li>
           </ul>
