--- a/galeria.html
+++ b/galeria.html
@@ -17,7 +17,7 @@
 
     <title>Banderas</title>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand text-primary" href="index.html"
@@ -54,95 +54,161 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center m-3 text-white">Top 10 banderas mas admiradas</h1>
-    <div class="container">
-      <div class="row g-3">
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/Japon.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/Canada.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/ReinoUnido.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/Sudafrica.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/Brasil.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/CoreaDelSur.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/Nepal.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/Mexico.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/Grecia.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/EstadosUnidos.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/Suiza.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
-        </div>
-        <div class="col-6 col-md-4 col-lg-3">
-          <img
-            src="Banderas/Noruega.jpeg"
-            alt=""
-            class="img-fluid object-fit-cover"
-          />
+
+    <main class="flex-grow-1">
+      <h1 class="text-center m-3 text-white">Top 10 banderas mas admiradas</h1>
+      <div class="container">
+        <div class="row g-3">
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/Japon.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/Canada.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/ReinoUnido.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/Sudafrica.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/Brasil.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/CoreaDelSur.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/Nepal.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/Mexico.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/Grecia.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/EstadosUnidos.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/Suiza.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <img
+              src="Banderas/Noruega.jpeg"
+              alt=""
+              class="img-fluid object-fit-cover"
+            />
+          </div>
         </div>
       </div>
-    </div>
+    </main>
+
+    <footer class="bg-dark text-white py-3 mt-auto">
+      <div class="container">
+        <div class="row align-items-center">
+          <!-- Columna Redes Sociales -->
+          <div class="col-12 col-md-8 col-lg-6 mb-3 mb-md-0">
+            <h5 class="mb-2">Nuestras Redes</h5>
+            <div class="d-flex flex-wrap gap-2">
+              <a
+                href="https://web.whatsapp.com/"
+                target="_blank"
+                class="text-white text-decoration-none d-inline-flex align-items-center gap-1 enlace-whatsapp"
+              >
+                <i class="fa-brands fa-whatsapp fs-5"></i> WhatsApp
+              </a>
+
+              <span class="text-secondary">•</span>
+
+              <a
+                href="https://www.facebook.com/?locale=es_LA"
+                target="_blank"
+                class="text-white text-decoration-none d-inline-flex align-items-center gap-1 enlace-facebook"
+              >
+                <i class="fa-brands fa-facebook fs-5"></i> Facebook
+              </a>
+
+              <span class="text-secondary">•</span>
+
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="text-white text-decoration-none d-inline-flex align-items-center gap-1 enlace-instagram"
+              >
+                <i class="fa-brands fa-instagram fs-5"></i> Instagram
+              </a>
+
+              <span class="text-secondary">•</span>
+
+              <a
+                href="https://www.youtube.com/"
+                target="_blank"
+                class="text-white text-decoration-none d-inline-flex align-items-center gap-1 enlace-youtube"
+              >
+                <i class="fa-brands fa-youtube fs-5"></i> YouTube
+              </a>
+            </div>
+          </div>
+
+          <!-- Columna Información -->
+          <div class="col-12 col-md-4 col-lg-6 text-md-end">
+            <h5 class="text-primary mb-2">Estadísticas Mundiales</h5>
+            <div class="d-flex flex-column gap-1">
+              <p class="text-secondary mb-0 small">
+                © 2025 Todos los derechos reservados.
+              </p>
+              <p class="text-secondary small mb-0">
+                Datos actualizados diariamente desde fuentes oficiales.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
